--- a/Portfolio_HannahPark/Portfolio_hannah_2.html
+++ b/Portfolio_HannahPark/Portfolio_hannah_2.html
@@ -16,44 +16,63 @@
    <div class="container">
      <div class="col-xs-12">
       <br></br>
-      <br></br>
        <img src="img/portfolio_LOGO.png" id="LOGO">
       </div>
-        <div class="row" id="group_bars">
-          <div class="col-md-3">
-            <div class="bar">
-              <img id="bar1" src="img/AboutMe_bar.jpg" alt="barl" />
-                <h5>About Me</h5>
-              </div>
-            </div>
-          <div class="col-md-3">
-            <div class="bar">
-              <img id="bar2" src="img/webDesign_bar.jpg" alt="bar2" />
-                <h5>Web Design</h5>
+      <div class="col-xs-12">
+       <img src="img/facebook_icon.png" id="icons">
+       </div>
+       <br></br>
+       <br></br>
+
+        <div class="row" id="group_bars" class="bar">
+          <div class="col-md-3" >
+            <div class="bar" id="bar1">
             </div>
           </div>
           <div class="col-md-3">
-            <div class="bar">
-              <img id="bar3" src="img/BrandManagement_bar.jpg" alt="bar3" />
-                <h5>Brand Management</h5>
+            <div class="bar" id="bar2">
             </div>
           </div>
           <div class="col-md-3">
-            <div class="bar">
-              <img id="bar4" src="img/contact_bar.jpg" alt="bar4" />
-                <h5>Contact</h5>
+            <div class="bar" id="bar3">
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="row">
-              <img id="lastLine" src="img/last_line.jpg" alt="line" />
+          <div class="col-md-3">
+            <div class="bar" id="bar4">
             </div>
           </div>
+        </div>
+
+
+        <div class="row" id="group_bars_text">
+          <div class="col-md-3">
+            <h5>About Me</h5>
+          </div>
+          <div class="col-md-3">
+            <h5>Web Design</h5>
+          </div>
+          <div class="col-md-3">
+            <h5>Brand Management</h5>
+          </div>
+          <div class="col-md-3">
+            <h5>Contact</h5>
+          </div>
+        </div>
+        <br></br>
+        <br></br>
+        <div class="col-md-12">
+         <div class="row">
+          <div class="line" id="line">
+          </div>
+         </div>
+        </div>
+        <br></br>
+        <br></br>
+
+
         <div class="container" id="address">
          <p>Email:
           <span class="glyphicon glyphicon-envelope"></span></p>
-         <p>search:
-          <span class="glyphicon glyphicon-search"></span></p>
       </div>
     </div>
    </div>
