--- a/Portfolio_HannahPark/Portfolio_hannah_2.html
+++ b/Portfolio_HannahPark/Portfolio_hannah_2.html
@@ -15,12 +15,31 @@
   <body>
    <div class="container">
      <div class="col-xs-12">
-      <br></br>
+       <br></br>
+       <br></br>
+     <div class="row">
        <img src="img/portfolio_LOGO.png" id="LOGO">
-      </div>
-      <div class="col-xs-12">
-       <img src="img/facebook_icon.png" id="icons">
+       <br></br>
+     </div>
+     </div>
+     <div class="row">
+       <div class="div1">
+         <div class="col-md-4">
        </div>
+         </div>
+       <div class="div2">
+         <div class="col-md-4">
+          <img src="img/facebook_icon.png" id="icons_1">
+          <img src="img/insta_icon.png" id="icons_2">
+          <img src="img/whatsapp_icon.png" id="icons_3">
+          <img src="img/twitter_icon.png" id="icons_4">
+        </div>
+      </div>
+      <div class="div3">
+        <div class="col-md-4">
+      </div>
+     </div>
+    </div>
        <br></br>
        <br></br>
 
@@ -44,6 +63,7 @@
         </div>
 
 
+
         <div class="row" id="group_bars_text">
           <div class="col-md-3">
             <h5>About Me</h5>
@@ -58,6 +78,30 @@
             <h5>Contact</h5>
           </div>
         </div>
+
+
+        <div class="row" id="content1">
+          <div class="col-md-12">
+            <span>About Me</span>
+          </div>
+        </div>
+        <div class="row" id="content2">
+          <div class="col-md-12">
+            <span>Web Design</span>
+          </div>
+        </div>
+        <div class="row" id="content3">
+          <div class="col-md-12">
+            <span>Brand Management</span>
+          </div>
+        </div>
+        <div class="row" id="content4">
+          <div class="col-md-12">
+            <span>Contactt</span>
+          </div>
+        </div>
+
+
         <br></br>
         <br></br>
         <div class="col-md-12">
@@ -67,12 +111,17 @@
          </div>
         </div>
         <br></br>
-        <br></br>
-
-
-        <div class="container" id="address">
-         <p>Email:
-          <span class="glyphicon glyphicon-envelope"></span></p>
+      <div class="container">
+       <div class="col-md-12">
+        <div class="row" id="contects">
+         <div id="address">
+          <p>www.hannahpark_610.co.kr</p>
+         <div id="email">
+          <p>Email:
+           <span class="glyphicon glyphicon-envelope"></span></p>
+         </div>
+        </div>
+       </div>
       </div>
     </div>
    </div>
