--- a/Portfolio_HannahPark/Portfolio_hannah_2.html
+++ b/Portfolio_HannahPark/Portfolio_hannah_2.html
@@ -15,20 +15,34 @@
   <body>
    <div class="container">
      <div class="col-xs-12">
-       <br></br>
-       <br></br>
-     <div class="row">
-       <img src="img/portfolio_LOGO.png" id="LOGO">
-       <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+      <br></br>
+      <div class="row">
+       <div class="main1" id="GraphicDesigner">
+        <div class="col-xs-4">
+          <h4>Graphic Designer</h4>
+        </div>
+       </div>
+      <div class="main2" >
+       <div class="col-xs-4">
+        <img src="img/portfolio_LOGO.png" id="LOGO">
+       </div>
      </div>
+     <div class="main3" id="WebDeveloper">
+      <div class="col-xs-4">
+        <h4>Web Developer</h4>
+      </div>
      </div>
+    </div>
      <div class="row">
        <div class="div1">
-         <div class="col-md-4">
+         <div class="col-xs-4">
        </div>
          </div>
        <div class="div2">
-         <div class="col-md-4">
+         <div class="col-xs-4">
           <img src="img/facebook_icon.png" id="icons_1">
           <img src="img/insta_icon.png" id="icons_2">
           <img src="img/whatsapp_icon.png" id="icons_3">
@@ -36,27 +50,31 @@
         </div>
       </div>
       <div class="div3">
-        <div class="col-md-4">
+        <div class="col-xs-4">
       </div>
      </div>
     </div>
+    <div class="row" id="icons_1_S">
+      <div class="col-xs-3">
+        <h5>About Me</h5>
+      </div>
        <br></br>
        <br></br>
 
         <div class="row" id="group_bars" class="bar">
-          <div class="col-md-3" >
+          <div class="col-xs-3" >
             <div class="bar" id="bar1">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <div class="bar" id="bar2">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <div class="bar" id="bar3">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <div class="bar" id="bar4">
             </div>
           </div>
@@ -65,63 +83,63 @@
 
 
         <div class="row" id="group_bars_text">
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <h5>About Me</h5>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <h5>Web Design</h5>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <h5>Brand Management</h5>
           </div>
-          <div class="col-md-3">
+          <div class="col-xs-3">
             <h5>Contact</h5>
           </div>
         </div>
-
-
         <div class="row" id="content1">
           <div class="col-md-12">
-            <span>About Me</span>
+            <span>Web Site</span>
           </div>
         </div>
         <div class="row" id="content2">
           <div class="col-md-12">
-            <span>Web Design</span>
+            <span>CI/BI</span>
           </div>
         </div>
         <div class="row" id="content3">
           <div class="col-md-12">
-            <span>Brand Management</span>
+            <span>Package</span>
           </div>
         </div>
         <div class="row" id="content4">
           <div class="col-md-12">
-            <span>Contactt</span>
+            <span>Brand Management</span>
           </div>
         </div>
 
-
         <br></br>
         <br></br>
-        <div class="col-md-12">
+        <br></br>
+        <br></br>
          <div class="row">
           <div class="line" id="line">
           </div>
          </div>
+         <div class="row" id="group_contects" class="contect">
+          <div class="col-xs-4" >
+            <div class="contect" id="address">
+              <h6>www.hannahpark_610.co.kr</h6>
+            </div>
+          </div>
+          <div class="col-xs-4" >
+           </div>
+          <div class="col-xs-4" >
+           <div class="contect" id="email">
+             <h6><span class="glyphicon glyphicon-envelope"></span>
+                 E-Mail [teyang610@gmail.com]</h6>
+           </div>
+          </div>
         </div>
-        <br></br>
-      <div class="container">
-       <div class="col-md-12">
-        <div class="row" id="contects">
-         <div id="address">
-          <p>www.hannahpark_610.co.kr</p>
-         <div id="email">
-          <p>Email:
-           <span class="glyphicon glyphicon-envelope"></span></p>
-         </div>
-        </div>
-       </div>
       </div>
     </div>
    </div>
