--- a/Portfolio_HannahPark/Portfolio_hannah_2.html
+++ b/Portfolio_HannahPark/Portfolio_hannah_2.html
@@ -13,30 +13,27 @@
        <script src="js/Portfolio_hannah_2.js"></script>
   </head>
   <body>
+   <br></br>
+   <br></br>
+   <br></br>
    <div class="container">
-     <div class="col-xs-12">
-      <br></br>
-      <br></br>
-      <br></br>
-      <br></br>
-      <div class="row">
-       <div class="main1" id="GraphicDesigner">
-        <div class="col-xs-4">
-          <h4>Graphic Designer</h4>
-        </div>
-       </div>
-      <div class="main2" >
-       <div class="col-xs-4">
-        <img src="img/portfolio_LOGO.png" id="LOGO">
-       </div>
-     </div>
-     <div class="main3" id="WebDeveloper">
-      <div class="col-xs-4">
-        <h4>Web Developer</h4>
+    <div class="row main">
+     <div class="col-xs-4">
+      <div class="main1" id="GraphicDesigner">
+        <h4>Graphic Designer</h4>
       </div>
+    </div>
+     <div class="col-xs-4">
+     <div class="main2" >
+      <img src="img/portfolio_LOGO.png" id="LOGO">
      </div>
     </div>
-     <div class="row">
+     <div class="col-xs-4">
+     <div class="main3" id="WebDeveloper">
+      <h4>Web Developer</h4>
+     </div>
+    </div>
+   </div>
        <div class="div1">
          <div class="col-xs-4">
        </div>
@@ -53,95 +50,122 @@
         <div class="col-xs-4">
       </div>
      </div>
+
+    <div class="row" id="icons_1" class="SNS_icons">
+      <div class="col-xs-12">
+        <div class="SNS_icons" id="icons_1_f">
+        </div>
+      </div>
     </div>
-    <div class="row" id="icons_1_S">
+    <div class="row" id="icons_2" class="SNS_icons">
+      <div class="col-xs-12">
+        <div class="SNS_icons" id="icons_2_i">
+        </div>
+      </div>
+    </div>
+    <div class="row" id="icons_3" class="SNS_icons">
+      <div class="col-xs-12">
+        <div class="SNS_icons" id="icons_3_w">
+        </div>
+      </div>
+    </div>
+    <div class="row" id="icons_4" class="SNS_icons">
+      <div class="col-xs-12">
+        <div class="SNS_icons" id="icons_4_t">
+        </div>
+      </div>
+    </div>
+
+   <div class="row" id="group_bars" class="bar">
+      <div class="col-xs-3" >
+        <div class="bar" id="bar1">
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="bar" id="bar2">
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="bar" id="bar3">
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="bar" id="bar4">
+        </div>
+      </div>
+    </div>
+   <div class="row" id="group_bars_text">
       <div class="col-xs-3">
         <h5>About Me</h5>
       </div>
-       <br></br>
-       <br></br>
-
-        <div class="row" id="group_bars" class="bar">
-          <div class="col-xs-3" >
-            <div class="bar" id="bar1">
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="bar" id="bar2">
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="bar" id="bar3">
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="bar" id="bar4">
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="row" id="group_bars_text">
-          <div class="col-xs-3">
-            <h5>About Me</h5>
-          </div>
-          <div class="col-xs-3">
-            <h5>Web Design</h5>
-          </div>
-          <div class="col-xs-3">
-            <h5>Brand Management</h5>
-          </div>
-          <div class="col-xs-3">
-            <h5>Contact</h5>
-          </div>
-        </div>
-        <div class="row" id="content1">
-          <div class="col-md-12">
-            <span>Web Site</span>
-          </div>
-        </div>
-        <div class="row" id="content2">
-          <div class="col-md-12">
-            <span>CI/BI</span>
-          </div>
-        </div>
-        <div class="row" id="content3">
-          <div class="col-md-12">
-            <span>Package</span>
-          </div>
-        </div>
-        <div class="row" id="content4">
-          <div class="col-md-12">
-            <span>Brand Management</span>
-          </div>
-        </div>
-
-        <br></br>
-        <br></br>
-        <br></br>
-        <br></br>
-         <div class="row">
-          <div class="line" id="line">
-          </div>
-         </div>
-         <div class="row" id="group_contects" class="contect">
-          <div class="col-xs-4" >
-            <div class="contect" id="address">
-              <h6>www.hannahpark_610.co.kr</h6>
-            </div>
-          </div>
-          <div class="col-xs-4" >
-           </div>
-          <div class="col-xs-4" >
-           <div class="contect" id="email">
-             <h6><span class="glyphicon glyphicon-envelope"></span>
-                 E-Mail [teyang610@gmail.com]</h6>
-           </div>
-          </div>
-        </div>
+      <div class="col-xs-3">
+        <h5>Web Design</h5>
+      </div>
+      <div class="col-xs-3">
+        <h5>Brand Management</h5>
+      </div>
+      <div class="col-xs-3">
+        <h5>Contact</h5>
       </div>
     </div>
-   </div>
-  </body>
+   <div class="row" id="content1">
+      <div class="col-md-12">
+        <span>
+         <br></br>
+            <p1 class="p1"> I'm Hannah Park </p1>
+            <div class="row">
+            <img src="img/hannah_profile1.jpg" id="profile">
+            </div>
+            <p4 class="p4"> "Today is my youngest day of my life" </p4>
+            <br></br>
+            <br></br>
+            <p> Hi I'm Hannah Park.</p>
+            <br></br>
+            <p> I've born in South Korea. But I live in Canada Vancouver right now.</p>
+            <p> I interested in Graphic design and Web develpment.</p>
+            <p> So I want to see alot of things as much as possible.</p>
+            <p> There is no limit to life.</p>
+            <p> I will always challenge new things.</p>
+       </span>
+      </div>
+    </div>
+    <div class="row" id="content2">
+      <div class="col-md-12">
+        <span>Web Design</span>
+      </div>
+    </div>
+    <div class="row" id="content3">
+      <div class="col-md-12">
+        <span>Brand Management</span>
+      </div>
+    </div>
+    <div class="row" id="content4">
+      <div class="col-md-12">
+        <span>Contact</span>
+      </div>
+    </div>
+
+    <br></br>
+    <br></br>
+     <div class="row">
+      <div class="line" id="line">
+      </div>
+     </div>
+     <div class="row" id="group_contects" class="contect">
+      <div class="col-xs-4" >
+        <div class="contect" id="address">
+          <h6>www.hannahpark_610.co.kr</h6>
+        </div>
+      </div>
+      <div class="col-xs-4" >
+       </div>
+      <div class="col-xs-4" >
+       <div class="contect" id="email">
+         <h6><span class="glyphicon glyphicon-envelope"></span>
+             E-Mail [teyang610@gmail.com]</h6>
+       </div>
+      </div>
+     </div>
+    </div>
+ </body>
 </html>
