--- a/Portfolio_HannahPark/Portfolio_hannah_2.html
+++ b/Portfolio_HannahPark/Portfolio_hannah_2.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Hannah's Home Page</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/Portfolio_hannah_2.css">
   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -212,8 +211,8 @@
           <input placeholder="example@email.com" class="form-control" id="inEmail" type="email" />
         </div>
         <div class="form-group">
-          <label for="inmassage">massages:</label>
-          <textarea id="txtChat" class="form-control" readonly></textarea>
+          <label for="inmessage">messages:</label>
+          <textarea id="txtMessage" class="form-control" readonly></textarea>
         </div>
         <button type="submit" id="btnLogin" onclick="btnLoginClicked();"
         class="btn btn-default">send</button>
