--- a/Practise/Javascript_tutorial.html
+++ b/Practise/Javascript_tutorial.html
@@ -9,7 +9,16 @@
 
     <button type="button" onclick="document.getElementById('myImage').src ='pic_bulbon.gif'">Turn on the light </button>
     <img id="myImage" src="pic_bulboff.gif" style="width:100px">
-
     <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+
+    <p id="demo"> lalalalalalala </p>
+    <button type="button" onclick="document.getElementById('demo').style.fontSize='35px'">Click Me!</button>
+
+    <p id="demo">JavaScript can hide HTML elements.</p>
+    <button type="button" onclick="document.getElementById('demo').style.display='none'">Click Me!</button>
+
+    <p id="demo" style="display:none">Hello JavaScript!</p>
+    <button type="button" onclick="document.getElementById('demo').style.display='block'">Click Me!</button>
+
 </body>
 </html>
