--- a/Practise/index_5.html
+++ b/Practise/index_5.html
@@ -28,6 +28,10 @@
       <td>Dinner</td>
     </tr>
   </tbody>
+  <tfoot>
+    <td>Total</td>
+     <td colspan="2">28</td>
+  </tfoot>
 </table>
 
   <ul class="navigation">
